2002-05-28  Ray Tomlinson  <RTomlinson@bbn.com>

	* org/cougaar/glm/plugin/completion/GLMCompletionTargetPlugin.java: 
	Specialization for GLM. Adds some ignored verbs for non-functional
	confidence rating on DetermineRequirements, GetLogSupport, and
	MaintainInventory.

	* org/cougaar/glm/plugin/completion/GLMCompletionSocietyPlugin.java:
	Specialization for GLM. Implements two CompletionActions to wait
	for oplan and GLS respectively. Eventually, these will actually
	"push the buttons", but for now they just wait.

	* org/cougaar/glm/plugin/completion/GLMCompletionNodePlugin.java:
	Specialization for GLM. Currently no specialization is necessary.

	* org/cougaar/mlm/plugin/sample/UniversalAllocatorPlugin.java:
	Remove debug println.

	* org/cougaar/mlm/ui/psp/plan/PSP_AddOplan.java: 
	* org/cougaar/mlm/plugin/sample/CompletionAssessor.java: 
	* org/cougaar/mlm/plugin/sample/AddAssetsGUIPlugin.java: 
	* org/cougaar/mlm/plugin/perturbation/Perturbation.java: 
	* org/cougaar/mlm/plugin/organization/GLSRescindPlugin.java: 
	* org/cougaar/mlm/plugin/organization/GLSInitServlet.java: 
	* org/cougaar/mlm/plugin/organization/GLSGUIInitPlugin.java: 
	* org/cougaar/mlm/plugin/ldm/SQLOplanPlugin.java: 
	* org/cougaar/mlm/plugin/ldm/OPlanPlugin.java: 
	* org/cougaar/mlm/plugin/assessor/InjectAssessReadinessGUIPlugin.java: 
	* org/cougaar/mlm/plugin/RandomButtonPusher.java: 
	* org/cougaar/glm/servlet/GLMStimulatorWorker.java: 
	* org/cougaar/glm/plugins/tools/GLMTestingStimulatorPlugin.java:
	* org/cougaar/glm/plugins/tools/GLMStimulatorPlugin.java: 
	* org/cougaar/mlm/debug/ui/UIPlugin.java:
	Use closeTransactionDontReset instead of closeTransaction(false);

2002-05-16  Ray Tomlinson  <RTomlinson@bbn.com>

	* org/cougaar/mlm/plugin/generic/GenericTablePlugin.java:
	Fix bug where estimated allocation results were never being
	update. Reason was that the task predicate was testing for the
	existence of a plan element -- a basic no-no since subscriptions